Did some changes